[project]
name = "fast-rail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain>=0.3.14",
    "langchain-anthropic>=0.3.0",
    "neo4j>=5.28.2",
    "python-dotenv>=1.1.1",
    "python-fasthtml>=0.12.24",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
]
